force-app/main/default/objects/TransporteurPrix__c/TransporteurPrix__c.object-meta.xml
<CustomObject>
    <label>Transporteur Prix</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>TransporteurPrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transporteur Prix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>