force-app/main/default/objects/TransporteurPrix__c/fields/D_lai_de_Livraison_jours__c.field-meta.xml
<CustomField>
    <fullName>D_lai_de_Livraison_jours__c</fullName>
    <label>Délai de Livraison (jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>