force-app/main/default/objects/TransporteurPrix__c/fields/Transporteur__c.field-meta.xml
<CustomField>
    <fullName>Transporteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporteur</label>
    <referenceTo>Transporteur__c</referenceTo>
    <relationshipLabel>Transporteur Prix</relationshipLabel>
    <relationshipName>Transporteur_Prix</relationshipName>
    <type>Lookup</type>
</CustomField>